Add unit tests for frontend. Fixes #156.

--- a/spec/javascripts/support/jasmine.yml
+++ b/spec/javascripts/support/jasmine.yml
@@ -10,9 +10,9 @@
 #   - lib/source2.js
 #   - dist/**/*.js
 #
-src_files:
-  - assets/application.js
-
+#src_files:
+#  - assets/application.js
+#
 # stylesheets
 #
 # Return an array of stylesheet filepaths relative to src_dir to include before jasmine specs.
