Stringmatcher now uses custom-crafted chop dictionary
	modified:   app/models/database_adapter/database_adapter.rb
	modified:   app/models/information_providers/components/stringmatch_info_provider.rb
	modified:   config/mongo.yml
	modified:   spec/models/database_adapter_spec.rb
	modified:   spec/models/database_spec.rb
	modified:   spec/models/stringmatch_info_provider_spec.rb

--- a/config/mongo.yml
+++ b/config/mongo.yml
@@ -33,6 +33,7 @@ defaults: &defaults
   doctors : [doctors,doctors],
   docfield_to_FMH_code : [doctors,docfield_to_fmh],
   icd_keywords : [dictionaries,icd_dictionary],
+  chop_keywords : [dictionaries,chop_dictionary],
   fmh_codes : [fmh,fmh_names],
   mdc_to_fmh : [mdc,mdc_to_fmh],
   mdcs : [mdc,mdc_names],
